--- a/01b_r-basics.qmd
+++ b/01b_r-basics.qmd
@@ -34,9 +34,9 @@ Any time you hit return and the R session shows a `+` instead of a `>`, it means
 
 Click on **File \> New File \> R Script**. Click on the save icon or (like any other file) using keyboard shortcut `CTRL / CMD + S`
 
-![](assets/img/script_new_create.png) ![](assets/img/script_new_save.png)
+![](assets/script_new_create.png) ![](assets/script_new_save.png)
 
-![](assets/img/script_new_open.png)
+![](assets/script_new_open.png)
 
 ### Executing commands from scripts
 
@@ -44,7 +44,7 @@ RStudio allows you to execute commands directly from the script editor by using 
 
 When you execute command from a script, the line of code in the script indicated by the cursor or all of the commands in the currently highlighted will be sent to the console. You can find other keyboard shortcuts in **Tools \> Keyboard Shortcuts Help** or in the [RStudio IDE cheatsheet](https://github.com/rstudio/cheatsheets/raw/master/rstudio-ide.pdf).
 
-![](assets/img/script_exe.png)
+![](assets/script_exe.png)
 
 ### Comments
 
