--- a/02a_rdm-intro.qmd
+++ b/02a_rdm-intro.qmd
@@ -37,11 +37,11 @@ execute:
 
 <p lang="en" dir="ltr">
 
-Act as though every short term study will become a long term one <a href="https://twitter.com/tomjwebb?ref_src=twsrc%5Etfw">@tomjwebb</a>. Needs to be reproducible in 3, 20, 100 yrs
+Act as though every short term study will become a long term one <a href="https://twitter.com/tomjwebb?ref_src=twsrc%5Etfw">\@tomjwebb</a>. Needs to be reproducible in 3, 20, 100 yrs
 
 </p>
 
-— Oceans Initiative (@oceansresearch) <a href="https://twitter.com/oceansresearch/status/556107891610894337?ref_src=twsrc%5Etfw">January 16, 2015</a>
+— Oceans Initiative (\@oceansresearch) <a href="https://twitter.com/oceansresearch/status/556107891610894337?ref_src=twsrc%5Etfw">January 16, 2015</a>
 
 </blockquote>
 
@@ -49,16 +49,15 @@ Act as though every short term study will become a long term one <a href="https:
 
 <p lang="en" dir="ltr">
 
-Act as though every short term study will become a long term one <a href="https://twitter.com/tomjwebb">@tomjwebb</a>. Needs to be reproducible in 3, 20, 100 yrs
+Act as though every short term study will become a long term one <a href="https://twitter.com/tomjwebb">\@tomjwebb</a>. Needs to be reproducible in 3, 20, 100 yrs
 
 </p>
 
-— oceans initiative (@oceansresearch) <a href="https://twitter.com/oceansresearch/status/556107891610894337">January 16, 2015</a>
+— oceans initiative (\@oceansresearch) <a href="https://twitter.com/oceansresearch/status/556107891610894337">January 16, 2015</a>
 
 </blockquote>
 
 # Data management
-
 
 ## Spreadsheets
 
@@ -68,11 +67,11 @@ Act as though every short term study will become a long term one <a href="https:
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> stay away from excel at all costs?
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> stay away from excel at all costs?
 
 </p>
 
-— Timothée Poisot (@tpoi) <a href="https://twitter.com/tpoi/status/556107000950829056">January 16, 2015</a>
+— Timothée Poisot (\@tpoi) <a href="https://twitter.com/tpoi/status/556107000950829056">January 16, 2015</a>
 
 </blockquote>
 
@@ -82,27 +81,25 @@ Act as though every short term study will become a long term one <a href="https:
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> <a href="https://twitter.com/tpoi">@tpoi</a> excel is fine for data entry. Just save in plain text format like csv. Some additional tips: <a href="https://t.co/8fUv9PyVjC">pic.twitter.com/8fUv9PyVjC</a>
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> <a href="https://twitter.com/tpoi">\@tpoi</a> excel is fine for data entry. Just save in plain text format like csv. Some additional tips: <a href="https://t.co/8fUv9PyVjC">pic.twitter.com/8fUv9PyVjC</a>
 
 </p>
 
-— Jaime Ashander (@jaimedash) <a href="https://twitter.com/jaimedash/status/556113131932381185">January 16, 2015</a>
+— Jaime Ashander (\@jaimedash) <a href="https://twitter.com/jaimedash/status/556113131932381185">January 16, 2015</a>
 
 </blockquote>
-
 
 <blockquote class="twitter-tweet" data-conversation="none" data-lang="en">
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/jaimedash">@jaimedash</a> just don’t let excel anywhere near dates or times. <a href="https://twitter.com/tomjwebb">@tomjwebb</a> <a href="https://twitter.com/tpoi">@tpoi</a> <a href="https://twitter.com/larysar">@larysar</a>
+<a href="https://twitter.com/jaimedash">\@jaimedash</a> just don’t let excel anywhere near dates or times. <a href="https://twitter.com/tomjwebb">\@tomjwebb</a> <a href="https://twitter.com/tpoi">\@tpoi</a> <a href="https://twitter.com/larysar">\@larysar</a>
 
 </p>
 
-— Dave Harris (@davidjayharris) <a href="https://twitter.com/davidjayharris/status/556126474550263809">January 16, 2015</a>
+— Dave Harris (\@davidjayharris) <a href="https://twitter.com/davidjayharris/status/556126474550263809">January 16, 2015</a>
 
 </blockquote>
-
 
 ## **Databases: more robust**
 
@@ -112,11 +109,11 @@ Stronger quality control features. Advisable for multiple contributors
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> databases? <a href="https://twitter.com/swcarpentry">@swcarpentry</a> has a good course on SQLite
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> databases? <a href="https://twitter.com/swcarpentry">\@swcarpentry</a> has a good course on SQLite
 
 </p>
 
-— Timothée Poisot (@tpoi) <a href="https://twitter.com/tpoi/status/556142573308608513">January 16, 2015</a>
+— Timothée Poisot (\@tpoi) <a href="https://twitter.com/tpoi/status/556142573308608513">January 16, 2015</a>
 
 </blockquote>
 
@@ -124,20 +121,18 @@ Stronger quality control features. Advisable for multiple contributors
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> <a href="https://twitter.com/tpoi">@tpoi</a> if the data are moderately complex, or involve multiple people, best to set up a database with well designed entry form 1/2
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> <a href="https://twitter.com/tpoi">\@tpoi</a> if the data are moderately complex, or involve multiple people, best to set up a database with well designed entry form 1/2
 
 </p>
 
-— Luca Borger (@lucaborger) <a href="https://twitter.com/lucaborger/status/556226732496535552">January 16, 2015</a>
+— Luca Borger (\@lucaborger) <a href="https://twitter.com/lucaborger/status/556226732496535552">January 16, 2015</a>
 
 </blockquote>
 
-
 ## **Databases: benefits**
 
-:::: {.columns}
+::: columns
 ::: {.column width="50%"}
-
 <blockquote data-conversation="none" data-lang="en">
 
 <p lang="en" dir="ltr">
@@ -158,34 +153,29 @@ Stronger quality control features. Advisable for multiple contributors
 
 </p>
 
-— Gavin Simpson (@ucfagls) <a href="https://twitter.com/ucfagls/status/556120176748290048">January 16, 2015</a>
+— Gavin Simpson (\@ucfagls) <a href="https://twitter.com/ucfagls/status/556120176748290048">January 16, 2015</a>
 
 </blockquote>
-
-
 :::
-::: {.column width="50%"}
 
+::: {.column width="50%"}
 <blockquote data-conversation="none" data-lang="en">
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> it also prevents a lot of different bad practices. It is possible to do some of this in Excel. <a href="https://twitter.com/tpoi">@tpoi</a>
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> it also prevents a lot of different bad practices. It is possible to do some of this in Excel. <a href="https://twitter.com/tpoi">\@tpoi</a>
 
 </p>
 
-— Ethan White (@ethanwhite) <a href="https://twitter.com/ethanwhite/status/556119826582605824">January 16, 2015</a>
+— Ethan White (\@ethanwhite) <a href="https://twitter.com/ethanwhite/status/556119826582605824">January 16, 2015</a>
 
 </blockquote>
 
 Have a look at the Data Carpentry [**SQL for Ecology** lesson](http://www.datacarpentry.org/sql-ecology-lesson/)
-
 :::
-::::
+:::
 
 # Data formats
-
-
 
 ## **Data formats**
 
@@ -197,17 +187,15 @@ Have a look at the Data Carpentry [**SQL for Ecology** lesson](http://www.dataca
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> It has to be interoperability/openness - can I read your data with whatever I use, without having to convert it?
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> It has to be interoperability/openness - can I read your data with whatever I use, without having to convert it?
 
 </p>
 
-— Paul Swaddle (@paul_swaddle) <a href="https://twitter.com/paul_swaddle/status/556148166270406656">January 16, 2015</a>
+— Paul Swaddle (\@paul_swaddle) <a href="https://twitter.com/paul_swaddle/status/556148166270406656">January 16, 2015</a>
 
 </blockquote>
 
 #### **more unusual formats will need instructions on use.**
-
-
 
 ## **Ensure data is machine readable**
 
@@ -236,10 +224,7 @@ Have a look at the Data Carpentry [**SQL for Ecology** lesson](http://www.dataca
 -   could help data entry
 -   `.csv` or `.tsv` copy would need to be saved.
 
-
-
 # Basic quality control
-
 
 ## **Use good null values**
 
@@ -343,9 +328,8 @@ knitr::include_graphics("assets/skimr_output.png")
 
 ## Validate
 
-:::: {.columns}
+::: columns
 ::: {.column width="50%"}
-
 ### pkg [`assertr`](https://github.com/ropensci/assertr)
 
 The `assertr` package supplies a suite of functions designed to verify assumptions about data and can be used so detect data errors during analysis.
@@ -361,15 +345,13 @@ e.g **confirm that `mtcars:`**
 -   contains more than 10 observations
 
 -   column for 'miles per gallon' (mpg) is a positive number before further analysis
-
 :::
-::: {.column width="50%"}
 
+::: {.column width="50%"}
 ```{r}
 #| echo: false
 mtcars <- tibble::as_tibble(mtcars)
 ```
-
 
 ```{r}
 library(assertr)
@@ -379,9 +361,8 @@ mtcars |>
     verify(nrow(.) > 10) %>%
     verify(mpg > 0)
 ```
-
 :::
-::::
+:::
 
 # Data security
 
@@ -393,11 +374,11 @@ mtcars |>
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> don't, not even with a barge pole, not for one second, touch or otherwise edit the raw data files. Do any manipulations in script
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> don't, not even with a barge pole, not for one second, touch or otherwise edit the raw data files. Do any manipulations in script
 
 </p>
 
-— Gavin Simpson (@ucfagls) <a href="https://twitter.com/ucfagls/status/556107371634634755">January 16, 2015</a>
+— Gavin Simpson (\@ucfagls) <a href="https://twitter.com/ucfagls/status/556107371634634755">January 16, 2015</a>
 
 </blockquote>
 
@@ -411,11 +392,11 @@ mtcars |>
 
 <p lang="en" dir="ltr">
 
-<a href="https://twitter.com/tomjwebb">@tomjwebb</a> <a href="https://twitter.com/srsupp">@srsupp</a> Keep one or a few good master data files (per data collection of interest), and code your formatting with good annotation.
+<a href="https://twitter.com/tomjwebb">\@tomjwebb</a> <a href="https://twitter.com/srsupp">\@srsupp</a> Keep one or a few good master data files (per data collection of interest), and code your formatting with good annotation.
 
 </p>
 
-— Desiree Narango (@DLNarango) <a href="https://twitter.com/DLNarango/status/556128407445323778">January 16, 2015</a>
+— Desiree Narango (\@DLNarango) <a href="https://twitter.com/DLNarango/status/556128407445323778">January 16, 2015</a>
 
 </blockquote>
 
