--- a/06c_code-chunks.qmd
+++ b/06c_code-chunks.qmd
@@ -18,7 +18,7 @@ individual <- readr::read_csv(
 
 ## Subset analysis data ----
 analysis_df <- individual %>%
-  filter(!is.na(growth_form), growth_form != "liana")
+  filter(complete.cases(.), growth_form != "liana")
 
 ## Order growth form levels
 gf_levels <- table(analysis_df$growth_form) %>%
@@ -170,7 +170,7 @@ individual <- readr::read_csv(
 
 ## Subset analysis data ----
 analysis_df <- individual %>%
-  filter(!is.na(growth_form), growth_form != "liana")
+  filter(complete.cases(.), growth_form != "liana")
 
 ## Order growth form levels
 gf_levels <- table(analysis_df$growth_form) %>%
@@ -263,7 +263,7 @@ individual <- readr::read_csv(
 
 ## Subset analysis data ----
 analysis_df <- individual %>%
-  filter(!is.na(growth_form), growth_form != "liana")
+  filter(complete.cases(.), growth_form != "liana")
 
 ## Order growth form levels
 gf_levels <- table(analysis_df$growth_form) %>%
@@ -479,7 +479,7 @@ individual <- readr::read_csv(
 
 ## Subset analysis data ----
 analysis_df <- individual %>%
-  filter(!is.na(growth_form), growth_form != "liana")
+  filter(complete.cases(.), growth_form != "liana")
 
 ## Order growth form levels
 gf_levels <- table(analysis_df$growth_form) %>%
